force-app/main/default/objects/Retail_Upload_Credit_Note__c/Retail_Upload_Credit_Note__c.object-meta.xml
<CustomObject>
    <label>Retail Upload Credit Note</label>
    <nameField>
        <displayFormat>RUCN-{0000}</displayFormat>
        <label>Retail Upload Credit Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Upload Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>