force-app/main/default/objects/Retail_Upload_Credit_Note__c/fields/Is_Credit_Note_applied__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit_Note_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Credit Note applied?</label>
    <type>Checkbox</type>
</CustomField>