force-app/main/default/objects/Retail_Upload_Credit_Note__c/fields/Return_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Return_Order_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Return Order ID</label>
    <referenceTo>Retail_Order_Return_Form__c</referenceTo>
    <relationshipLabel>Retail Upload Credit Notes</relationshipLabel>
    <relationshipName>Retail_Upload_Credit_Notes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>