force-app/main/default/objects/Retail_Upload_Credit_Note__c/validationRules/Is_credit_Note_applied_should_not_unchec.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_credit_Note_applied_should_not_unchec</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Is_Credit_Note_applied__c = FALSE)</errorConditionFormula>
    <errorDisplayField>Is_Credit_Note_applied__c</errorDisplayField>
    <errorMessage>Please make sure Credit Note is applied to the party!</errorMessage>
</ValidationRule>